# spotlight-web

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
api/: suggestions.js
constants/: search.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: dom.js
