[package]
name = "spotlight-web"
version = "0.1.0"
description = "A macOS Spotlight-like web search launcher for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "spotlight_web_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
